[metadata]
name = ice_extent
version = 0.1
description = Package for displaying ice and snow extent over the northern hemisphere
long_description = file: README.md
long_description_content_type = text/markdown
author = Dan Gilmore 
platform = any
keywords = meteorology, weather
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Intended Audience :: Science/Research
    Operating System :: OS Independent
url = https://github.com/GilmoreDM/ice_extent
project_urls =
    Source Code = https://github.com/GilmoreDM/ice_extent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
setup_requires = setuptools_scm
python_requires = >=3.6
install_requires =
    requests>=2.22.0
    wxPython>=4.1.0

[options.packages.find]
where = src
